fixed the navigation icon

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div>
-		<div class="header">
-			<h1>Himnario</h1>
-		</div>
-		<div class="main">
+	<div class="header">
+		<h1>Himnario</h1>
+		<div class="nav"></div>	
+	</div>
+	<div class="wrap">
+		<div class="cont">
 			<h3>Indice</h3>
 			<p>Para ver el indice haz click <a href="pages/indice.html">aqui</a>			
-		</div>
-
+		</div>			
 	</div>
 </body>
 </html>
