--- a/pages/song.html
+++ b/pages/song.html
@@ -8,12 +8,13 @@
 </head>
 <body>
 
-	<div>
-		<div class="title header"></div>
-		<div class="main">
-			<div class="song"></div>
+		<div class="title header">
+			
 		</div>
-	</div>
+		<div class="nav"></div>	
+		<div class="wrap">
+			<div class="cont"></div>
+		</div>
 
 	<div class="buttons">
 		<button id="back" class="nav-button">back</button>
