--- a/pages/indice.html
+++ b/pages/indice.html
@@ -11,7 +11,7 @@
 			<h1>Himnario | Indice</h1>
 			<div class="nav"></div>	
 		</div>
-		<div class="main">
+		<div class="wrap">
 			<div class="index"></div>
 		</div>
 	</div>
