edited the css and html and js file to give it a new look

--- a/pages/indice.html
+++ b/pages/indice.html
@@ -8,11 +8,15 @@
 <body>
 	<div>
 		<div class="header">
-			<h1>Himnario | Indice</h1>
+			
 			<div class="nav"></div>	
 		</div>
 		<div class="wrap">
-			<div class="index"></div>
+			<div class="cont">
+				<h1>Himnario | Indice</h1>
+				<div class="index"></div>
+			</div>
+			
 		</div>
 	</div>
 	<script src="../data/songs.js"></script>
