Made the pages more interactive

--- a/pages/song.html
+++ b/pages/song.html
@@ -15,8 +15,8 @@
 		<div class="wrap">
 			<div class="cont"></div>
 			<div class="buttons">
-				<button id="back" class="nav-button">back</button>
-				<button id="next" class="nav-button">next</button>
+				<button id="back" class="nav-button">atrás</button>
+				<button id="next" class="nav-button">siguiente</button>
 			</div>
 		</div>
 
