--- a/pages/song.html
+++ b/pages/song.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Himnario | Indice</title>
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<meta name="viewport" content="widh=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
