Made it possible to click on a song and display it using ajax

--- a/pages/indice.html
+++ b/pages/indice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Himnario | Indice</title>
+	<title>Himnario</title>
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -11,6 +11,7 @@
 			
 			<div class="nav"></div>	
 		</div>
+		<div class="load"></div>
 		<div class="wrap">
 			<div class="cont">
 				<h1>Himnario | Indice</h1>
