--- a/pages/song.html
+++ b/pages/song.html
@@ -1,31 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Himnario | Indice</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<meta name="viewport" content="widh=device-width, initial-scale=1">
-</head>
-<body>
-
-		<div class="title header">
-			
-		</div>
-		<div class="nav"></div>	
-		<div class="wrap">
-			<div class="cont"></div>
-			<div class="buttons">
-				<button id="back" class="nav-button">atrás</button>
-				<button id="next" class="nav-button">siguiente</button>
-			</div>
-		</div>
-
-
-
-	<script src="../data/songs.js"></script>
-	<script src="../data/app.js"></script>	
-	<script>
-	window.onload = displaySong(1);
-	</script>
-</body>
-</html>
+<div class="wrap">
+	<div class="cont"></div>
+	<div class="buttons">
+		<button id="back" class="nav-button" onclick="back()">atrás</button>
+		<button id="next" class="nav-button" onclick="next()">siguiente</button>
+	</div>
+</div>
