Changed the look and ux on the nav button

--- a/pages/indice.html
+++ b/pages/indice.html
@@ -9,14 +9,16 @@
 	<div>
 		<div class="header">
 			
-			<div class="nav" onclick="showMenu()"></div>	
+			<div class="nav"></div>
+
 			<div class="menu hide">
 				<ul class="main-m">
-					<a href="../index.html"><li>Inicio</li></a>
-					<a href="#"><li onclick="showIndice()">Indice</li></a>
+					<li class="nav-btn"><a href="../index.html">Inicio</a></li>
+					<li class="nav-btn" onclick="showIndice()"><a href="#">Índice</a></li>
 				</ul>
 				<div class="menuIndex" onclick="hideMenu()"></div>
 			</div>
+
 		</div>
 		<div class="load"></div>
 		<div class="wrap">
