Added a Bible verse to the home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Himnario</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
 </head>
 <body>
 	<div class="header">
@@ -14,7 +15,33 @@
 		<div class="cont">
 			<h1>Himnario</h1>
 			<h3>Indice</h3>
-			<p>Para ver el indice haz click <a href="pages/indice.html">aqui</a>			
+			<p>Para ver el indice haz click <a href="pages/indice.html">aqui</a>		
+			<div class="verse">
+				<blockquote>
+					<p>
+						Cantad a Jehová cántico nuevo,
+				    Porque ha hecho maravillas;
+				    Su diestra lo ha salvado, y su santo brazo.
+						Jehová ha hecho notoria su salvación;
+						A vista de las naciones ha descubierto su justicia.
+						Se ha acordado de su misericordia y de su verdad para con la casa de Israel;
+						Todos los términos de la tierra han visto la salvación de nuestro Dios.
+						Cantad alegres a Jehová, toda la tierra;
+						Levantad la voz, y aplaudid, y cantad salmos.
+						Cantad salmos a Jehová con arpa;
+						Con arpa y voz de cántico.
+						Aclamad con trompetas y sonidos de bocina,
+						Delante del rey Jehová.
+						Brame el mar y su plenitud,
+						El mundo y los que en él habitan;
+						Los ríos batan las manos,
+						Los montes todos hagan regocijo
+						Delante de Jehová, porque vino a juzgar la tierra.
+						Juzgará al mundo con justicia,
+						Y a los pueblos con rectitud. (Salmos 98)
+					</p>
+				</blockquote>
+			</div>	
 		</div>			
 	</div>
 </body>
